--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
+  emoji_picker_flutter: ^1.6.3
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
